openexr-sys/openexr-c/include/imath_vec.h

typedef struct Imath_3_0__Vec3_short__t_s {
    short x;
    short y;
    short z;
} OPENEXR_ALIGN(2) Imath_3_0__Vec3_short__t;
typedef Imath_3_0__Vec3_short__t Imath_V3s_t;
typedef struct Imath_3_0__Vec3_int__t_s {
    int x;
    int y;
    int z;
} OPENEXR_ALIGN(4) Imath_3_0__Vec3_int__t;
typedef Imath_3_0__Vec3_int__t Imath_V3i_t;
typedef struct Imath_3_0__Vec3_long__t_s {
    long x;
    long y;
    long z;
} OPENEXR_ALIGN(8) Imath_3_0__Vec3_long__t;
typedef Imath_3_0__Vec3_long__t Imath_V3i64_t;
typedef struct Imath_3_0__Vec3_float__t_s {
    float x;
    float y;
    float z;
} OPENEXR_ALIGN(4) Imath_3_0__Vec3_float__t;
typedef Imath_3_0__Vec3_float__t Imath_V3f_t;
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_sub(
    Imath_V3s_t const * this_
    , Imath_V3s_t * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_sub_1(
    Imath_V3s_t const * this_
    , Imath_V3s_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__negate(
    Imath_V3s_t * this_
    , Imath_V3s_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_imul(
    Imath_V3s_t * this_
    , Imath_V3s_t const * * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_imul_1(
    Imath_V3s_t * this_
    , Imath_V3s_t const * * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_mul(
    Imath_V3s_t const * this_
    , Imath_V3s_t * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_mul_1(
    Imath_V3s_t const * this_
    , Imath_V3s_t * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_idiv(
    Imath_V3s_t * this_
    , Imath_V3s_t const * * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_idiv_1(
    Imath_V3s_t * this_
    , Imath_V3s_t const * * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_div(
    Imath_V3s_t const * this_
    , Imath_V3s_t * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_div_1(
    Imath_V3s_t const * this_
    , Imath_V3s_t * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__length2(
    Imath_V3s_t const * this_
    , short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__baseTypeLowest(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__baseTypeMax(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__baseTypeSmallest(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__baseTypeEpsilon(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__index(
    Imath_V3i_t * this_
    , int * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__index_const(
    Imath_V3i_t const * this_
    , int const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__ctor(
    Imath_V3i_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__ctor_1(
    Imath_V3i_t * this_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__ctor_2(
    Imath_V3i_t * this_
    , int a
    , int b
    , int c);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__ctor_3(
    Imath_V3i_t * this_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___assign(
    Imath_V3i_t * this_
    , Imath_V3i_t const * * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__dtor(
    Imath_V3i_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__getValue(
    Imath_V3i_t * this_
    , int * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__getValue_1(
    Imath_V3i_t const * this_
    , int const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__equalWithAbsError(
    Imath_V3i_t const * this_
    , _Bool * return_
    , Imath_V3i_t const * v
    , int e);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__equalWithRelError(
    Imath_V3i_t const * this_
    , _Bool * return_
    , Imath_V3i_t const * v
    , int e);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__dot(
    Imath_V3i_t const * this_
    , int * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__cross(
    Imath_V3i_t const * this_
    , Imath_V3i_t * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_iadd(
    Imath_V3i_t * this_
    , Imath_V3i_t const * * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_add(
    Imath_V3i_t const * this_
    , Imath_V3i_t * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_isub(
    Imath_V3i_t * this_
    , Imath_V3i_t const * * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_sub(
    Imath_V3i_t const * this_
    , Imath_V3i_t * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_sub_1(
    Imath_V3i_t const * this_
    , Imath_V3i_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__negate(
    Imath_V3i_t * this_
    , Imath_V3i_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_imul(
    Imath_V3i_t * this_
    , Imath_V3i_t const * * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_imul_1(
    Imath_V3i_t * this_
    , Imath_V3i_t const * * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_mul(
    Imath_V3i_t const * this_
    , Imath_V3i_t * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_mul_1(
    Imath_V3i_t const * this_
    , Imath_V3i_t * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_idiv(
    Imath_V3i_t * this_
    , Imath_V3i_t const * * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_idiv_1(
    Imath_V3i_t * this_
    , Imath_V3i_t const * * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_div(
    Imath_V3i_t const * this_
    , Imath_V3i_t * return_
    , Imath_V3i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_int___op_div_1(
    Imath_V3i_t const * this_
    , Imath_V3i_t * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__length2(
    Imath_V3i_t const * this_
    , int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__baseTypeLowest(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__baseTypeMax(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__baseTypeSmallest(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__baseTypeEpsilon(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_int__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__index(
    Imath_V3i64_t * this_
    , long * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__index_const(
    Imath_V3i64_t const * this_
    , long const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__ctor(
    Imath_V3i64_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__ctor_1(
    Imath_V3i64_t * this_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__ctor_2(
    Imath_V3i64_t * this_
    , long a
    , long b
    , long c);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__copy(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___assign(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__dtor(
    Imath_V3i64_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__getValue(
    Imath_V3i64_t * this_
    , long * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__getValue_1(
    Imath_V3i64_t const * this_
    , long const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__equalWithAbsError(
    Imath_V3i64_t const * this_
    , _Bool * return_
    , Imath_V3i64_t const * v
    , long e);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__equalWithRelError(
    Imath_V3i64_t const * this_
    , _Bool * return_
    , Imath_V3i64_t const * v
    , long e);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__dot(
    Imath_V3i64_t const * this_
    , long * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__cross(
    Imath_V3i64_t const * this_
    , Imath_V3i64_t * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_iadd(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_add(
    Imath_V3i64_t const * this_
    , Imath_V3i64_t * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_isub(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_sub(
    Imath_V3i64_t const * this_
    , Imath_V3i64_t * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_sub_1(
    Imath_V3i64_t const * this_
    , Imath_V3i64_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__negate(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_imul(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_imul_1(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_mul(
    Imath_V3i64_t const * this_
    , Imath_V3i64_t * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_mul_1(
    Imath_V3i64_t const * this_
    , Imath_V3i64_t * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_idiv(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_idiv_1(
    Imath_V3i64_t * this_
    , Imath_V3i64_t const * * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_div(
    Imath_V3i64_t const * this_
    , Imath_V3i64_t * return_
    , Imath_V3i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_long___op_div_1(
    Imath_V3i64_t const * this_
    , Imath_V3i64_t * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__length2(
    Imath_V3i64_t const * this_
    , long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__baseTypeLowest(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__baseTypeMax(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__baseTypeSmallest(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__baseTypeEpsilon(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_long__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__index(
    Imath_V3f_t * this_
    , float * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__index_const(
    Imath_V3f_t const * this_
    , float const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__ctor(
    Imath_V3f_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__ctor_1(
    Imath_V3f_t * this_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__ctor_2(
    Imath_V3f_t * this_
    , float a
    , float b
    , float c);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__ctor_3(
    Imath_V3f_t * this_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___assign(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__dtor(
    Imath_V3f_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__getValue(
    Imath_V3f_t * this_
    , float * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__getValue_1(
    Imath_V3f_t const * this_
    , float const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__equalWithAbsError(
    Imath_V3f_t const * this_
    , _Bool * return_
    , Imath_V3f_t const * v
    , float e);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__equalWithRelError(
    Imath_V3f_t const * this_
    , _Bool * return_
    , Imath_V3f_t const * v
    , float e);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__dot(
    Imath_V3f_t const * this_
    , float * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__cross(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_iadd(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_add(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_isub(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_sub(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_sub_1(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__negate(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_);