openexr-sys/src/imath_vec.rs


pub fn Imath_3_0__Vec3_short___op_sub(this_: *const Imath_V3s_t, return_: *mut Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_sub_1(this_: *const Imath_V3s_t, return_: *mut Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short__negate(this_: *mut Imath_V3s_t, return_: *mut *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_imul(this_: *mut Imath_V3s_t, return_: *mut *const Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_imul_1(this_: *mut Imath_V3s_t, return_: *mut *const Imath_V3s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec3_short___op_mul(this_: *const Imath_V3s_t, return_: *mut Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_mul_1(this_: *const Imath_V3s_t, return_: *mut Imath_V3s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec3_short___op_idiv(this_: *mut Imath_V3s_t, return_: *mut *const Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_idiv_1(this_: *mut Imath_V3s_t, return_: *mut *const Imath_V3s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec3_short___op_div(this_: *const Imath_V3s_t, return_: *mut Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_div_1(this_: *const Imath_V3s_t, return_: *mut Imath_V3s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__length2(this_: *const Imath_V3s_t, return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__baseTypeLowest(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__baseTypeMax(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__baseTypeSmallest(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__baseTypeEpsilon(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec3_int__index(this_: *mut Imath_V3i_t, return_: *mut *mut c_int, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__index_const(this_: *const Imath_V3i_t, return_: *mut *const c_int, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__ctor(this_: *mut Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int__ctor_1(this_: *mut Imath_V3i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__ctor_2(this_: *mut Imath_V3i_t, a: c_int, b: c_int, c: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__ctor_3(this_: *mut Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___assign(this_: *mut Imath_V3i_t, return_: *mut *const Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int__dtor(this_: *mut Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int__getValue(this_: *mut Imath_V3i_t, return_: *mut *mut c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__getValue_1(this_: *const Imath_V3i_t, return_: *mut *const c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__equalWithAbsError(this_: *const Imath_V3i_t, return_: *mut bool, v: *const Imath_V3i_t, e: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__equalWithRelError(this_: *const Imath_V3i_t, return_: *mut bool, v: *const Imath_V3i_t, e: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__dot(this_: *const Imath_V3i_t, return_: *mut c_int, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int__cross(this_: *const Imath_V3i_t, return_: *mut Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_iadd(this_: *mut Imath_V3i_t, return_: *mut *const Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_add(this_: *const Imath_V3i_t, return_: *mut Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_isub(this_: *mut Imath_V3i_t, return_: *mut *const Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_sub(this_: *const Imath_V3i_t, return_: *mut Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_sub_1(this_: *const Imath_V3i_t, return_: *mut Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int__negate(this_: *mut Imath_V3i_t, return_: *mut *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_imul(this_: *mut Imath_V3i_t, return_: *mut *const Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_imul_1(this_: *mut Imath_V3i_t, return_: *mut *const Imath_V3i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int___op_mul(this_: *const Imath_V3i_t, return_: *mut Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_mul_1(this_: *const Imath_V3i_t, return_: *mut Imath_V3i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int___op_idiv(this_: *mut Imath_V3i_t, return_: *mut *const Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_idiv_1(this_: *mut Imath_V3i_t, return_: *mut *const Imath_V3i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int___op_div(this_: *const Imath_V3i_t, return_: *mut Imath_V3i_t, v: *const Imath_V3i_t) -> Exception;

pub fn Imath_3_0__Vec3_int___op_div_1(this_: *const Imath_V3i_t, return_: *mut Imath_V3i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__length2(this_: *const Imath_V3i_t, return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__baseTypeLowest(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__baseTypeMax(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__baseTypeSmallest(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__baseTypeEpsilon(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec3_int__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec3_long__index(this_: *mut Imath_V3i64_t, return_: *mut *mut c_long, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_long__index_const(this_: *const Imath_V3i64_t, return_: *mut *const c_long, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_long__ctor(this_: *mut Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long__ctor_1(this_: *mut Imath_V3i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__ctor_2(this_: *mut Imath_V3i64_t, a: c_long, b: c_long, c: c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__copy(this_: *mut Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___assign(this_: *mut Imath_V3i64_t, return_: *mut *const Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long__dtor(this_: *mut Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long__getValue(this_: *mut Imath_V3i64_t, return_: *mut *mut c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__getValue_1(this_: *const Imath_V3i64_t, return_: *mut *const c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__equalWithAbsError(this_: *const Imath_V3i64_t, return_: *mut bool, v: *const Imath_V3i64_t, e: c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__equalWithRelError(this_: *const Imath_V3i64_t, return_: *mut bool, v: *const Imath_V3i64_t, e: c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__dot(this_: *const Imath_V3i64_t, return_: *mut c_long, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long__cross(this_: *const Imath_V3i64_t, return_: *mut Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_iadd(this_: *mut Imath_V3i64_t, return_: *mut *const Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_add(this_: *const Imath_V3i64_t, return_: *mut Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_isub(this_: *mut Imath_V3i64_t, return_: *mut *const Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_sub(this_: *const Imath_V3i64_t, return_: *mut Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_sub_1(this_: *const Imath_V3i64_t, return_: *mut Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long__negate(this_: *mut Imath_V3i64_t, return_: *mut *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_imul(this_: *mut Imath_V3i64_t, return_: *mut *const Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_imul_1(this_: *mut Imath_V3i64_t, return_: *mut *const Imath_V3i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec3_long___op_mul(this_: *const Imath_V3i64_t, return_: *mut Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_mul_1(this_: *const Imath_V3i64_t, return_: *mut Imath_V3i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec3_long___op_idiv(this_: *mut Imath_V3i64_t, return_: *mut *const Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_idiv_1(this_: *mut Imath_V3i64_t, return_: *mut *const Imath_V3i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec3_long___op_div(this_: *const Imath_V3i64_t, return_: *mut Imath_V3i64_t, v: *const Imath_V3i64_t) -> Exception;

pub fn Imath_3_0__Vec3_long___op_div_1(this_: *const Imath_V3i64_t, return_: *mut Imath_V3i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__length2(this_: *const Imath_V3i64_t, return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__baseTypeLowest(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__baseTypeMax(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__baseTypeSmallest(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__baseTypeEpsilon(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec3_long__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec3_float__index(this_: *mut Imath_V3f_t, return_: *mut *mut c_float, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_float__index_const(this_: *const Imath_V3f_t, return_: *mut *const c_float, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_float__ctor(this_: *mut Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__ctor_1(this_: *mut Imath_V3f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__ctor_2(this_: *mut Imath_V3f_t, a: c_float, b: c_float, c: c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__ctor_3(this_: *mut Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___assign(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__dtor(this_: *mut Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__getValue(this_: *mut Imath_V3f_t, return_: *mut *mut c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__getValue_1(this_: *const Imath_V3f_t, return_: *mut *const c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__equalWithAbsError(this_: *const Imath_V3f_t, return_: *mut bool, v: *const Imath_V3f_t, e: c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__equalWithRelError(this_: *const Imath_V3f_t, return_: *mut bool, v: *const Imath_V3f_t, e: c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__dot(this_: *const Imath_V3f_t, return_: *mut c_float, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__cross(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_iadd(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_add(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_isub(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_sub(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_sub_1(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__negate(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t) -> Exception;
